# py-ruc-finder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ruc_finder.conf  ruc_finder.service
.github/workflows/: deploy.yml  docker-publish.yml
docs/: database-setup.md
src/: config.rs  db.rs  errors.rs  exporter.rs  footprint.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  repository.rs  scraper.rs
tests/: api_test.rs  check_digit_test.rs  cli_test.rs  config_test.rs  errors_test.rs  exporter_test.rs  models_test.rs
tests/data/: ruc0.txt  ruc1.txt  ruc2.txt
