[package]
name = "ruc_finder"
version = "0.1.6"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
csv = "1"
arrow = "54"
parquet = "54"
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
sha2 = "0.10"
